#121 More UI issues: * source as link instead of button * fix source link when url has a hash * new query uses the new layout * rename url /src => /source... * when deleting a visualization update the hash * don't submit title/description if it hasn't changed * mobile: fix description field wrapping

--- a/rd_ui/app/styles/redash.css
+++ b/rd_ui/app/styles/redash.css
@@ -27,7 +27,7 @@ a.navbar-brand {
 }
 
 .edit-in-place span {
-    white-space: pre;
+    white-space: pre-line;
 }
 .edit-in-place span.editable {
     cursor: pointer;
